<resources>
    <string name="app_name">Just Java</string>
    <string name="Quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">Order</string>
</resources>
