<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/name"
                android:textAllCaps="true"
                style="@style/CustomText"/>

            <EditText
                android:id="@+id/nameEditTextView"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            style="@style/CustomText"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:id = "@+id/checkBox1"

            />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp"
                android:id = "@+id/checkBox2"

                />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            style="@style/CustomText"/>

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantity_minus"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAllCaps="true"
                android:onClick="decrementQuantity" />
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="0"
            android:textAllCaps="true" />
            <Button
                android:id="@+id/quantity_plus"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:textAllCaps="true"
                android:onClick="incrementQuantity"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            style="@style/CustomText"/>


        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textAllCaps="true"
            android:onClick="submitOrder" />



    </LinearLayout>

</ScrollView>